--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -1,38 +1,105 @@
-.addToDo {
-    height: 50px;
-    width: 125px;
-    background-color: pink;
-    border-radius: 10px;
-    font-size: 20px;
+@import url('https://fonts.googleapis.com/css?family=Astloch|Megrim');
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #FCD4D4;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+p,
+span {
     color: white;
-    border: 2px solid white;
+    font-family: 'Megrim', cursive;
 }
 
-.addToDo:hover {
-    background-color: white;
-    color: pink;
-    border: 2px solid pink;
+.App {
+    font-family: 'Megrim', cursive;
+    text-align: center;
+    padding: 0 36px;
+    max-width: 600px;
+    margin: 0 auto;
 }
 
-.clearToDo {
-    height: 50px;
-    width: 125px;
-    background-color: paleturquoise;
-    border-radius: 10px;
-    font-size: 20px;
-    color: white;
-    border: 2px solid white;
-    line-height: .75;
-}
-
-.clearToDo:hover {
-    background-color: white;
-    color: paleturquoise;
-    border: 2px solid paleturquoise;
-}
-
-.buttons {
+.header {
     display: flex;
-    align-items: flex-start;
-    margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+h1 {
+    font-size: 36px;
+    font-family: 'Astloch', cursive;
+    color: #A6A6A8;
+    text-align: left;
+}
+
+.todo-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+}
+.item {
+    background-color: #F9A9B9;
+    font-size: 22px;
+    width: 60%;
+    text-align: left;
+    margin: 4px 0;
+    padding-left: 8px;
+}
+
+.item.completed {
+    background-color: #FCBFC8;
+    text-decoration: line-through wavy;
+}
+form {
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+}
+form > input {
+    font-family: 'Megrim', cursive;
+    background-color: #FCD4D4;
+    border: 0;
+    padding: 6px 0;
+    font-size: 1.5rem;
+    width: 240px;
+    outline: 0;
+    color: white;
+    border-bottom: 1px solid #ea8591;
+    margin-right: 8px;
+}
+
+button {
+    font-family: 'Astloch', cursive;
+    background-color: #ea8591;
+    border: 1px solid #ea8591;
+    color: white;
+    font-size: 30px;
+    padding: 6px 14px;
+}
+
+input::placeholder {
+    font-family: 'Megrim', cursive;
+    color: #ea8591;
+    opacity: 1;
+}
+
+.clear-btn {
+    margin-top: 30px;
 }
